<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_textView"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    android:text="@string/title"
                    style="@style/TextViews" />

                <EditText
                    android:id="@+id/title_editText"
                    android:layout_width="102dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    android:inputType="textMultiLine"
                    android:textSize="16sp"
                    android:hint="@string/titleEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="88dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/author_textView"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    android:text="@string/author"
                    style="@style/TextViews" />

                <EditText
                    android:id="@+id/author_editText"
                    android:layout_width="102dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    android:inputType="textMultiLine"
                    android:textSize="16sp"
                    android:hint="@string/authorEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="232dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                >

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/save"
                    android:layout_marginTop="48dp"
                    android:textSize="16sp"
                    android:textAppearance="@android:style/TextAppearance"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>